# sflib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build_test.sh  check_header.py  make_version.py  projectConfig.json  sf_argv  sf_argv.h  sf_argv.hpp  sf_assigned_type.h  sf_assigned_type.hpp  sf_cache  sf_chan  sf_co  sf_color  sf_color.h  sf_colored_string  sf_colored_string.h  sf_colored_string.hpp  sf_data_buffer  sf_define.h  sf_empty_class.h  sf_empty_class.hpp  sf_error  sf_error.h  sf_event_waiter  sf_event_waiter.h  sf_event_waiter.hpp  sf_eventloop  sf_eventloop.h  sf_eventloop.hpp  sf_file_reader  sf_finally  sf_finally.h  sf_finally.hpp  (+201 more)
build_mingw/: build_mingw.bat
compiler/: sf_grammer_utils.h  sf_lex  sf_lex.h  sf_lex.hpp  sf_yacc.h  sf_yacc.hpp
core/: sf_chan.h  sf_chan.hpp  sf_chan_utils.h  sf_colored_string  sf_colored_string.h  sf_colored_string.hpp  sf_define.h  sf_empty_class.h  sf_error.h  sf_event_waiter.h  sf_event_waiter.hpp  sf_eventloop  sf_eventloop.h  sf_eventloop.hpp  sf_msg_queue  sf_msg_queue.h  sf_msg_queue.hpp  sf_msvc_safe.h  sf_nb_chan  sf_nb_chan.h  sf_nb_chan.hpp  sf_object.h  sf_object.hpp  sf_object_msg_queue.hpp  sf_stdc++  sf_stdc++.h  sf_string  sf_string.h  sf_string.hpp  sf_timer.h  sf_timer.hpp  sf_type.h  sf_type.hpp
database/: sf_database_interface.h
demo/: xmake.lua
doc/: Doxyfile  HTTP框架指南.md  doc.sh  sflib.chm
example/: CMakeLists.txt
example/test_aop/: test_aop.cpp
example/test_argv/: test_argv.cpp
example/test_chan/: test_chan.cpp
example/test_colored_string/: test_colored_string.cpp
example/test_event_waiter/: test_event_waiter.cpp
example/test_factory/: config.json  test_factory.cpp
example/test_finally/: test_finally.cpp
example/test_grammer/: test_grammer.cpp
example/test_http_server/: test_http_server.cpp
example/test_http_server/testWebsite/: index.html
example/test_json/: test_json.cpp
example/test_msg_bus/: test_msg_bus_client.cpp  test_msg_bus_server.cpp
example/test_nb_chan/: test_nb_chan.cpp
example/test_object/: test_object.cpp
example/test_object_manager/: config.json  test_object_manager.cpp
example/test_rpc/: test_rpc_client.cpp  test_rpc_server.cpp
example/test_sf_logger/: test_sf_logger.cpp
example/test_sf_test/: test_sf_test.cpp
example/test_tcp/: test_tcp_client.cpp  test_tcp_server.cpp
example/test_tcp_nat_traversal/: test_tcp_nat_traversal_client.cpp  test_tcp_nat_traversal_server.cpp
example/test_tcp_server/: test_tcp_server.cpp
example/test_template/: test_template.cpp
example/test_thread_pool/: test_thread_pool.cpp
example/test_type_list/: test_type_list.cpp
include/: argv.h  cache.h  chan.h  co_attr.h  co_condition_variable.h  co_ctx.h  co_env.h  co_manager.h  co_mutex.h  co_syscall.h  color.h  compiler_utils.h  connection.h  connector.h  coroutine.h  data_buffer.h  define.h  dns_client.h  dns_utils.h  error.h  event_waiter.h  eventloop.h  file_reader.h  instance_maker.h  io_fd.h  json.h  json_utils.h  lex.h  listener.h  logger.h  meta.h  msg_queue.h  multi_value.h  net_type.h  net_utils.h  object.h  object_factory.h  object_factory_utils.h  object_msg_queue.h  option.h  (+16 more)
libsf_any/: CMakeLists.txt  main.cpp  sf_any.h
libsf_object/: CMakeLists.txt
libsf_object/include/: sf_event_waiter.h  sf_event_waiter.hpp  sf_eventloop.h  sf_eventloop.hpp  sf_msg_queue.h  sf_msg_queue.hpp  sf_object.h  sf_object.hpp  sf_timer.h  sf_timer.hpp
libsf_object/src/: sf_eventloop.cpp  sf_msg_queue.cpp  sf_object.cpp  sf_timer.cpp
libsf_serialize/: CMakeLists.txt  main.cpp  sf_serialize.h
libsf_serialize/include/: sf_serialize.h  sf_serialize_binary.h  sf_serialize_binary.hpp
libsf_serialize/src/: sf_serialize.cpp
libsf_tcp/: CMakeLists.txt
libsf_tcp/include/: sf_tcpclient.h  sf_tcpclient_linux.h  sf_tcpclient_win.h  sf_tcpserver.h  sf_tcpserver_linux.h  sf_tcpserver_win.h  sf_tcputils.h
libsf_tcp/src/: sf_tcpclient.cpp  sf_tcpserver.cpp
libsf_tcp/tcp/: CMakeLists.txt
libsf_tcp/tcp/include/: tcpclient.h  tcpserver.h  tcputils.h
libsf_tcp/tcp/src/: tcpclient.cpp  tcpserver.cpp
libsf_tcp/test_tcpclient/: CMakeLists.txt  main.cpp
libsf_tcp/test_tcpserver/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  aop_test.cpp  client_main.cpp  rpc_declare.h  server_main.cpp  test.cpp  test_chain_call.cpp  test_httpserver.cpp  test_msg_bus_client.cpp  test_net_cap.cpp  test_object.cpp  test_sf_debug.cpp  test_thread_pool.cpp  test_type_list.cpp  xmake.lua
test/sf_argv/: test_sf_argv.cpp
test/sf_cache/: test_sf_cache.cpp
test/sf_chan/: test_sf_chan.cpp
test/sf_data_buffer/: test_sf_data_buffer.cpp
test/sf_event_waiter/: test_sf_event_waiter.cpp
test/sf_finally/: test_sf_finally.cpp
test/sf_http/: test_sf_http.cpp
test/sf_json/: test_sf_json.cpp
test/sf_multi_value/: test_sf_multi_value.cpp
test/sf_string/: test_sf_string.cpp
test/sf_tcp/: test_sf_tcp.cpp
test/test_any/: test_any.cpp
test/test_aop/: test_aop.cpp
test/test_chain_call/: test_chain_call.cpp
test/test_component_system/: test_component_a.cpp  test_component_b.cpp  test_component_server.cpp
test/test_encrypt/: test_encrypt.cpp
test/test_event_waiter/: test_event_waiter.cpp
test/test_finally/: test_finally.cpp
test/test_grammer/: test_grammer.cpp
test/test_http_server/: test_http_server.cpp
test/test_http_server/testWebsite/: index.html
test/test_json/: test_json.cpp
test/test_lisp/: test_lisp.cpp
test/test_meta/: test_meta.cpp
test/test_meta_object/: test_meta_object.cpp
test/test_msg_bus/: test_msg_bus_client.cpp  test_msg_bus_server.cpp
test/test_object/: test_object.cpp
test/test_rpc/: test_rpc_client.cpp  test_rpc_server.cpp
test/test_sf_debug/: test_sf_debug.cpp
test/test_sf_logger/: test_sf_logger.cpp
test/test_tcp_nat_traversal/: test_tcp_nat_traversal_client.cpp  test_tcp_nat_traversal_server.cpp
test/test_tcpserver/: test_tcpserver.cpp
test/test_thread_pool/: test_thread_pool.cpp
test/test_timer/: test_timer.cpp
test/test_type_list/: test_type_list.cpp
(+1055 files in other folders)
